# libdwgpp_full

./: .gitignore  CMakeLists.txt  core.layout  includes-pch.h  libredwgpp_full.cbp  libredwgpp_full.layout  makedebug.sh  remake.sh
core/: CMakeLists.txt  core.cbp  licence.txt  lpassert.h
core/include/: iobuffer.h  random.h  resultcode.h  string.h
core/include/buffers/: filebuffer.h  tempfilebuffer.h  volatilebuffer.h
core/include/log/: display.h  logmanager.h  simplefiledisplay.h
core/include/random/: lincong.h
core/src/buffers/: tempfilebuffer.cpp  volatilebuffer.cpp
core/src/log/: coutdisplay.cpp  logmanager.cpp
core/src/random/: random.cpp
include/: lock.h
include/buffers/: membuffer.h
include/log/: coutdisplay.h  message.h
libredwgpp/parser/: decoder.h
parser/r2000/: parser2000.h
src/: iobuffer.cpp  resultcode.cpp  string.cpp
src/buffers/: filebuffer.cpp  membuffer.cpp
src/random/: lincong.cpp
testing/: CMakeLists.txt  ProgramOptions.txt  testing.cpp
testing/suite/: dwgbuffer.cpp  dwgbuffer.h  objects.cpp  objects.h  suite.h
testing/suite/schemas/: schemaface3d.h  schemanoop.h
testing/utils/: clock.h  unittest.h  unittestsuite.cpp  unittestsuite.h
